# zip_viewer

./: CMakeLists.txt  README.md
include/: zipmodel.h  ziputils.h  zipviewer.h
src/: main.cpp  zipmodel.cpp  ziputils.cpp  zipviewer.cpp
